src/test/fail/basic_syntax/else_without_if.lly
#[
SyntaxError: 'else' without 'if'.
Where: File "else_without_if.lly" at line 6
]#

else
